fix(css): prevent horizonal scroll with scrollbars

--- a/theme/assets/css/main.css
+++ b/theme/assets/css/main.css
@@ -208,7 +208,6 @@ pre {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100vw;
 }
 
 /* Post Feed */
